--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+DS_store
 HELP.md
 target/
 !.mvn/wrapper/maven-wrapper.jar
@@ -29,7 +30,6 @@ build/
 !**/src/main/**/build/
 !**/src/test/**/build/
 
-src/main/resources/application.properties
 
 ### VS Code ###
 .vscode/
